nothing new, just push master branch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Shopping List</string>
-    <string name="nothing_new">Nothing new</string>
+    <string name="nothing_new">Nothing new 1 more times</string>
 </resources>
