design, recycler view and method "showList" in MainActivity has been added. now in ShopListRepositoryImpl "shopList" is sortedSetOf ShopItem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Shopping List</string>
     <string name="nothing_new">Nothing new 1 more times</string>
+    <string name="add_shop_item">add shop item</string>
 </resources>
