--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Shopping List</string>
     <string name="nothing_new">Nothing new 1 more times</string>
     <string name="add_shop_item">add shop item</string>
+    <string name="name_hint">Name:</string>
+    <string name="count_hint">Count:</string>
+    <string name="save_button">Save</string>
 </resources>
